# LearnEQ

./: Intro_project.pxd  Logo.drawio  README.md  deployment_cert.der  pass123456.jks  private_key.pepk  settings.gradle
app/: build.gradle
app/src/androidTest/java/lv/kartishev/eq/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: eq_ranges.json
app/src/main/cpp/: CMakeLists.txt  LearnEqEngine.cpp  LearnEqEngine.h  jni_bridge.cpp  native-lib.cpp
app/src/main/cpp/asset/: AAssetDataSource.cpp  AAssetDataSource.h  DataSource.h  FFMpegExtractor.cpp  FFMpegExtractor.h  NDKExtractor.cpp  NDKExtractor.h
app/src/main/cpp/player/: Player.cpp  Player.h
app/src/main/cpp/util/: constants.cpp  constants.h  logging.h
app/src/main/java/lv/kartishev/eq/: EQScale.kt  EQScaleRanged.kt  EqCheatSheetFragment.kt  HomeFragment.kt  MainActivity.kt  MasterEqFragment.kt  PlaybackEngine.java  PlaybackEngine.kt  SecondFragment.kt
app/src/main/java/lv/kartishev/eq/components/: EQScale.kt  EQScaleRanged.kt
app/src/main/java/lv/kartishev/eq/fragment/: EqCheatSheetFragment.kt  MasterEqFragment.kt
app/src/main/res/layout/: activity_main.xml  content_main.xml  fragment_eq_cheat_sheet.xml  fragment_master_eq.xml  fragment_second.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: attrs_e_q_scale.xml  attrs_e_q_scale_ranged.xml  colors.xml  strings.xml  styles.xml
app/src/test/java/lv/kartishev/eq/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
